# naive-password-manager

./: CMakeLists.txt  README.md
src/: main.cpp
